--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uisp-crm-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "TypeScript client library for UISP CRM API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -48,10 +48,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/diegomax/uisp-crm-api.git"
+    "url": "git+https://github.com/diegomax/uisp.git"
   },
   "bugs": {
-    "url": "https://github.com/diegomax/uisp-crm-api/issues"
+    "url": "https://github.com/diegomax/uisp/issues"
   },
-  "homepage": "https://github.com/diegomax/uisp-crm-api#readme"
+  "homepage": "https://github.com/diegomax/uisp#readme"
 }
