--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uisp-crm-api",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "TypeScript client library for UISP CRM API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,8 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "prepare": "npm run build",
     "example:quick-start": "ts-node examples/quick-start.ts",
-    "example:usage": "ts-node examples/usage-examples.ts"
+    "example:usage": "ts-node examples/usage-examples.ts",
+    "example:services": "ts-node examples/services-examples.ts"
   },
   "keywords": [
     "uisp",
